# TimeTable111

./: Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: conftest.py
backend/bell/: api.py  dependencies.py  models.py  repository.py  schemas.py  test_bell.py
backend/classroom/: api.py  models.py  repository.py  schemas.py
backend/core/: database.py  dependencies.py  exceptions.py  repository.py  router_generator.py  schemas.py
backend/course/: api.py  models.py  repository.py  schemas.py
backend/course_teacher/: models.py
backend/group/: api.py  models.py  repository.py  schemas.py
backend/index/: api.py
backend/schedule_item/: api.py  dependencies.py  models.py  repository.py  schemas.py
backend/teacher/: api.py  models.py  repository.py  schemas.py
backend/teacher_wish/: models.py  repository.py  schemas.py
backend/type_schedule_item/: api.py  models.py  repository.py  schemas.py
backend/week/: models.py  repository.py  schemas.py
migrations/: env.py
migrations/versions/: 032731ea5b82_add_classroom_table.py  0f1f3b08d6da_add_teacher_table.py  14bdb0215f66_add_type_schedule_item_table.py  1569fa621c91_add_group_table.py  6c3e869a4fd9_many_to_many_between_course_and_teacher.py  7e9d5b5a111b_add_week_table.py  89d7b08f883e_add_bell_table.py  951a6b738ad0_add_label_in_subgroup.py  a973fc07ac9a_add_schedule_item_table.py  ae3e895e09bf_add_course_table.py  afc6a666c4e4_date_in_schedule_item_table.py  b04a73b00266_ondelete_cascade.py  (+2 more)
schedule_generator/: main.py  schemas.py
templates/: index.html
(+15 files in other folders)
